# SimpleTextEdit

./: CMakeLists.txt  LICENSE.EXTERNAL  README.md  SimpleTextEdit_en.ts  SimpleTextEdit_en_CA.ts  SimpleTextEdit_es.ts  SimpleTextEdit_es_US.ts  SimpleTextEdit_fr.ts  SimpleTextEdit_fr_CA.ts  SimpleTextEdit_ko.ts  aboutdialog.cpp  aboutdialog.hpp  aboutdialog.ui  buildinfo.hpp.in  findflags.hpp  findreplacedialog.cpp  findreplacedialog.hpp  findreplacedialog.ui  images.qrc  main.cpp  maintextedit.cpp  maintextedit.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
